@@ -11,6 +11,10 @@ Package author: Andy Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-09-33
+2016-4-18 David Schneider
+- update to pdsdata 8.6.8 with Andor::ConfigV2 JIRA PSAS-229
+
 Tag: V00-09-32
 2016-4-14 David Schneider
 - add hdf5 support for generic1d PSAS-225
